syntax = "proto3";
option java_package = "com.dj.im.sdk.proto";
option java_outer_classname = "PrGetGroupInfo";
import "prGroup.proto";

message GetGroupInfoRequest {
    int64 groupId = 1;
}

message GetGroupInfoResponse {
    // 群信息
    GroupResponse groupInfo = 1;
}